src/objects/loan__L1_Segment__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>loan__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>L1 Segments</relationshipLabel>
        <relationshipName>L1_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Base_Segment_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Segment Definition</label>
        <referenceTo>loan__Base_Segment_Definition__c</referenceTo>
        <relationshipLabel>L1 Segments</relationshipLabel>
        <relationshipName>L1_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Change_Indicator__c</fullName>
        <label>Change Indicator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__New_Consumer_Account_Number__c</fullName>
        <label>New Consumer Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__New_Identification_Number__c</fullName>
        <label>New Identification Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Reserved__c</fullName>
        <label>Reserved</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Segment_Identifier__c</fullName>
        <label>Segment Identifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>L1 Segment</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>L1 Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>